changed and added some test methods